force-app/main/default/objects/Course__c/fields/Is_approved__c.field-meta.xml
<CustomField>
    <fullName>Is_approved__c</fullName>
    <label>Is approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Unapproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>