force-app/main/default/objects/Course__c/fields/Per_Seat_Price__c.field-meta.xml
<CustomField>
    <fullName>Per_Seat_Price__c</fullName>
    <description>Price of course per seat.</description>
    <label>Per Seat Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>